# kawaii

./: CMakeLists.txt  alpc_pool_spray.cpp  architect_known_dlls_sib.cpp  build.bat  build.py  byovd_blind.cpp  coop_execution_chain.cpp  coop_rtlrestorecontext.cpp  coop_tp_wait_trigger.cpp  cve_2024_21338_appid.cpp  cve_2024_26229_csc_lpe.c  cve_2025_21204_lpe.cpp  cve_2025_21298_zero_click_rce.cpp  cve_2025_23198_teams_rce.cpp  cve_2025_62215_lpe.cpp  cve_2026_20817_wer_alpc_lpe.cpp  cve_2026_28289_mail2shell.cpp  data_only_token_stealer.cpp  dirty_vanity.cpp  discord_c2_baseline.cpp  dynamic_tp_wait_offsets.cpp  full_cve_2025_62215_exploit.cpp  full_pdata_parser.cpp  halos_gate.cpp  hevd_pool_overflow.cpp  hw_assisted_hooking.cpp  hwbp_veh.cpp  indirect_syscalls.cpp  jit_injection.cpp  kaslr_bypass.c  module_stomping.cpp  ntdll_hijack.cpp  pdata_spoofing.cpp  poolparty_tpwork.cpp  ppl_bypass.cpp  process_reflection.cpp  real_rtcore64_token_stealer.cpp  remote_lde_resolver.cpp  remote_peb_taint_engine.cpp  sleep_obfuscation.cpp  (+6 more)
archive/: discord_c2_baseline.cpp
discord_c2_native/: DEPLOYMENT_GUIDE.md  cred_access_memory.cpp  deploy_zero_click.py  keylogger_native.cpp  main_beacon.cpp  persistence_com_hijack.cpp  screenshot_gdi.cpp
discord_c2_v2/: ANALYSIS_AND_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  beacon_fallback.py  deploy_zero_click_advanced.py  evasion_native.cpp  injection_apc.cpp  injection_indirect_syscalls.cpp  main_beacon_v2.cpp  persistence_com_hijack.cpp  persistence_wmi.cpp  reflective_loader.cpp  sleep_ekko.cpp  teams_delivery.py
(+1 files in other folders)
